--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,16 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>JFXProject</name>
+  <build>
+    <resources>
+      <resource>
+        <directory>src/main/java</directory>
+        <includes>
+          <include>**/*.fxml</include>
+        </includes>
+      </resource>
+    </resources>
+  </build>
   <modules>
     <module>client</module>
     <module>network</module>
